[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mon-web-intelligence"
version = "1.0.0"
description = "MON (Moson Web Intelligence Engine) -- a modular web intelligence and API reconnaissance framework."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Moson Tech" }]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["mon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
